fix(nav): fix navbar border
Background of navigation is overlapping the border style.
Remove the background color to show the border

--- a/scss/include/_layout.scss
+++ b/scss/include/_layout.scss
@@ -22,7 +22,6 @@ body {
 }
 
 navigation-side {
-  background-color: #fff;
   position: fixed;
   padding: 14px 22px;
   top: 54px;
